--- a/Minimum-Swaps-2.ipynb
+++ b/Minimum-Swaps-2.ipynb
@@ -35,25 +35,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "[1, 3, 5, 2, 4, 6, 7]\n3 1\n[1, 5, 3, 2, 4, 6, 7]\n5 1\n[1, 4, 3, 2, 5, 6, 7]\n4 1\n[1, 2, 3, 4, 5, 6, 7]\n"
+      "True\n[1, 2, 3, 4, 5, 6, 7]\n[1, 2, 3, 4, 5, 6, 7]\n"
      ]
     },
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "3"
+       "0"
       ]
      },
      "metadata": {},
-     "execution_count": 35
+     "execution_count": 2
     }
    ],
    "source": [
@@ -78,6 +78,7 @@
     "\n",
     "test = [2,3,4,1,5]\n",
     "test2 = [1,3,5,2,4,6,7]\n",
+    "\n",
     "minimumSwaps(test2)"
    ]
   },
@@ -90,10 +91,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[1, 2, 3, 4, 5, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def merge(arr, left_index, right_index, middle):\n",
+    "    # make copies of both arrays we're trying to merge\n",
+    "    left_copy = arr[left_index: middle+1]\n",
+    "    right_copy = arr[middle+1:right_index+1]\n",
+    "\n",
+    "    # Initial values for variables that we use to keep\n",
+    "    # track of where we are in each array\n",
+    "    left_copy_index = 0\n",
+    "    right_copy_index = 0\n",
+    "    sorted_index = left_index\n",
+    "\n",
+    "    # go through both copies until we run out of elements in one\n",
+    "    while left_copy_index < len(left_copy) and right_copy_index < len(right_copy):\n",
+    "        \n",
+    "        # If left_copy has the smaller element, put it in the sorted\n",
+    "        # part and then move forard in the left_copy (by increasing the pointer)\n",
+    "        if left_copy[left_copy_index] <= right_copy[right_copy_index]:\n",
+    "            arr[sorted_index] = left_copy[left_copy_index]\n",
+    "            left_copy_index = left_copy_index + 1\n",
+    "        # opposite from above\n",
+    "        else:\n",
+    "            arr[sorted_index] = right_copy[right_copy_index]\n",
+    "            right_copy_index = right_copy_index + 1\n",
+    "\n",
+    "        # regardless of which copy list the element came from\n",
+    "        # move forward in the sorted part\n",
+    "        sorted_index = sorted_index + 1\n",
+    "\n",
+    "    # When either the left copy or right copy run out of elements\n",
+    "    # go through the remaining elements and add them\n",
+    "    while left_copy_index < len(left_copy):\n",
+    "        arr[sorted_index] = left_copy[left_copy_index]\n",
+    "        left_copy_index = left_copy_index + 1\n",
+    "        sorted_index = sorted_index + 1\n",
+    "    \n",
+    "    while right_copy_index < len(right_copy):\n",
+    "        arr[sorted_index] = right_copy[right_copy_index]\n",
+    "        right_copy_index = right_copy_index + 1\n",
+    "        sorted_index = sorted_index + 1\n",
+    "\n",
+    "\n",
+    "def merge_sort(arr, left_index, right_index):\n",
+    "    if left_index >= right_index:\n",
+    "        return\n",
+    "    \n",
+    "    middle = (left_index + right_index)//2\n",
+    "    merge_sort(arr, left_index, middle)\n",
+    "    merge_sort(arr, middle+1, right_index)\n",
+    "    merge(arr, left_index, right_index, middle)\n",
+    "\n",
+    "test = [2,3,4,1,5,9]\n",
+    "\n",
+    "merge_sort(test, 0, len(test)-1)\n",
+    "\n",
+    "print(test)"
+   ]
   }
  ]
 }
